--- a/NiziKit.Editor/EditorApp.axaml
+++ b/NiziKit.Editor/EditorApp.axaml
@@ -67,6 +67,20 @@
         <x:Double x:Key="FileBrowserCellSize">180</x:Double>
         <x:Double x:Key="FileBrowserIconSize">72</x:Double>
         <x:Double x:Key="FileBrowserCellFontSize">24</x:Double>
+
+        <x:Double x:Key="DockFontSizeNormal">26</x:Double>
+        <x:Double x:Key="DockDragPreviewFontSize">24</x:Double>
+        <x:Double x:Key="TabStripItemMinHeight">56</x:Double>
+        <x:Double x:Key="DockSplitterSize">6</x:Double>
+        <SolidColorBrush x:Key="DockThemeBackgroundBrush" Color="{StaticResource SurfaceColor}"/>
+        <SolidColorBrush x:Key="DockThemeForegroundBrush" Color="{StaticResource TextPrimaryColor}"/>
+        <SolidColorBrush x:Key="DockThemeBorderLowBrush" Color="#50FFFFFF"/>
+        <SolidColorBrush x:Key="DockThemeControlBackgroundBrush" Color="{StaticResource SurfaceDarkColor}"/>
+        <SolidColorBrush x:Key="DockApplicationAccentBrushLow" Color="{StaticResource AccentColor}"/>
+        <SolidColorBrush x:Key="DockApplicationAccentBrushMed" Color="{StaticResource SurfaceLightColor}"/>
+        <SolidColorBrush x:Key="DockApplicationAccentBrushHigh" Color="{StaticResource AccentHoverColor}"/>
+        <SolidColorBrush x:Key="DockApplicationAccentForegroundBrush" Color="{StaticResource TextPrimaryColor}"/>
+        <SolidColorBrush x:Key="DockApplicationAccentBrushIndicator" Color="{StaticResource AccentColor}"/>
     </Application.Resources>
 
     <Application.Styles>
@@ -304,6 +318,24 @@
 
         <Style Selector="dock|ProportionalDockControl">
             <Setter Property="Background" Value="Transparent"/>
+        </Style>
+
+        <Style Selector="ProportionalStackPanelSplitter">
+            <Setter Property="Background" Value="#40FFFFFF"/>
+        </Style>
+
+        <Style Selector="ProportionalStackPanelSplitter:pointerover">
+            <Setter Property="Background" Value="{DynamicResource AccentBrush}"/>
+        </Style>
+
+        <Style Selector="ProportionalStackPanelSplitter:horizontal">
+            <Setter Property="MinHeight" Value="6"/>
+            <Setter Property="Cursor" Value="SizeNorthSouth"/>
+        </Style>
+
+        <Style Selector="ProportionalStackPanelSplitter:vertical">
+            <Setter Property="MinWidth" Value="6"/>
+            <Setter Property="Cursor" Value="SizeWestEast"/>
         </Style>
     </Application.Styles>
 
