--- a/NiziKit.Editor/EditorMainView.axaml
+++ b/NiziKit.Editor/EditorMainView.axaml
@@ -15,7 +15,7 @@
     <Panel>
         <Grid RowDefinitions="Auto,*">
             <Border Grid.Row="0"
-                    Background="#C0181818"
+                    Background="{DynamicResource SurfaceDarkBrush}"
                     Padding="4,2">
                 <Menu Background="Transparent">
                     <MenuItem Header="File">
