--- a/NiziKit.Editor/EditorApp.axaml
+++ b/NiziKit.Editor/EditorApp.axaml
@@ -71,7 +71,7 @@
         <x:Double x:Key="DockFontSizeNormal">26</x:Double>
         <x:Double x:Key="DockDragPreviewFontSize">24</x:Double>
         <x:Double x:Key="TabStripItemMinHeight">56</x:Double>
-        <x:Double x:Key="DockSplitterSize">6</x:Double>
+        <x:Double x:Key="DockSplitterSize">2</x:Double>
         <SolidColorBrush x:Key="DockThemeBackgroundBrush" Color="{StaticResource SurfaceColor}"/>
         <SolidColorBrush x:Key="DockThemeForegroundBrush" Color="{StaticResource TextPrimaryColor}"/>
         <SolidColorBrush x:Key="DockThemeBorderLowBrush" Color="#50FFFFFF"/>
@@ -86,6 +86,20 @@
     <Application.Styles>
         <semi:SemiTheme />
         <dockThemes:DockFluentTheme />
+
+        <Styles>
+            <Styles.Resources>
+                <SolidColorBrush x:Key="DockThemeBackgroundBrush" Color="{StaticResource SurfaceColor}"/>
+                <SolidColorBrush x:Key="DockThemeForegroundBrush" Color="{StaticResource TextPrimaryColor}"/>
+                <SolidColorBrush x:Key="DockThemeBorderLowBrush" Color="#50FFFFFF"/>
+                <SolidColorBrush x:Key="DockThemeControlBackgroundBrush" Color="{StaticResource SurfaceDarkColor}"/>
+                <SolidColorBrush x:Key="DockApplicationAccentBrushLow" Color="{StaticResource AccentColor}"/>
+                <SolidColorBrush x:Key="DockApplicationAccentBrushMed" Color="{StaticResource SurfaceLightColor}"/>
+                <SolidColorBrush x:Key="DockApplicationAccentBrushHigh" Color="{StaticResource AccentHoverColor}"/>
+                <SolidColorBrush x:Key="DockApplicationAccentForegroundBrush" Color="{StaticResource TextPrimaryColor}"/>
+                <SolidColorBrush x:Key="DockApplicationAccentBrushIndicator" Color="{StaticResource AccentColor}"/>
+            </Styles.Resources>
+        </Styles>
 
         <Style Selector=":is(TopLevel)">
             <Setter Property="Background" Value="Transparent"/>
@@ -294,13 +308,22 @@
             <Setter Property="Foreground" Value="{DynamicResource TextSecondaryBrush}"/>
         </Style>
 
+        <Style Selector="dock|ToolTabStripItem /template/ Border">
+            <Setter Property="Background" Value="{DynamicResource SurfaceDarkBrush}"/>
+        </Style>
+
         <Style Selector="dock|ToolTabStripItem:selected">
             <Setter Property="Foreground" Value="{DynamicResource TextPrimaryBrush}"/>
             <Setter Property="Background" Value="{DynamicResource SurfaceBrush}"/>
         </Style>
 
+        <Style Selector="dock|ToolTabStripItem:selected /template/ Border">
+            <Setter Property="Background" Value="{DynamicResource SurfaceBrush}"/>
+        </Style>
+
         <Style Selector="dock|ToolTabStripItem:pointerover">
             <Setter Property="Foreground" Value="{DynamicResource TextPrimaryBrush}"/>
+            <Setter Property="Background" Value="{DynamicResource SurfaceLightBrush}"/>
         </Style>
 
         <Style Selector="dock|DocumentTabStripItem">
@@ -329,12 +352,12 @@
         </Style>
 
         <Style Selector="ProportionalStackPanelSplitter:horizontal">
-            <Setter Property="MinHeight" Value="6"/>
+            <Setter Property="MinHeight" Value="2"/>
             <Setter Property="Cursor" Value="SizeNorthSouth"/>
         </Style>
 
         <Style Selector="ProportionalStackPanelSplitter:vertical">
-            <Setter Property="MinWidth" Value="6"/>
+            <Setter Property="MinWidth" Value="2"/>
             <Setter Property="Cursor" Value="SizeWestEast"/>
         </Style>
     </Application.Styles>
