--- a/NiziKit.Editor/Views/FileBrowserGrid.axaml
+++ b/NiziKit.Editor/Views/FileBrowserGrid.axaml
@@ -21,33 +21,43 @@
                               Width="16" Height="16"/>
                 </Button>
 
-                <ItemsControl Grid.Column="1"
-                              ItemsSource="{Binding BreadcrumbParts}"
-                              Margin="8,0"
-                              VerticalAlignment="Center">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal" Spacing="2"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate x:DataType="vm:BreadcrumbItem">
-                            <StackPanel Orientation="Horizontal">
-                                <Button Classes="ghost"
-                                        Content="{Binding Name}"
-                                        Command="{Binding $parent[ItemsControl].DataContext.NavigateToCommand}"
-                                        CommandParameter="{Binding Path}"
-                                        Padding="4,2"
-                                        FontSize="{DynamicResource FileBrowserCellFontSize}"/>
-                                <TextBlock Text=">"
-                                           VerticalAlignment="Center"
-                                           Margin="2,0"
-                                           Foreground="{DynamicResource TextMutedBrush}"
-                                           FontSize="{DynamicResource FileBrowserCellFontSize}"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                <ScrollViewer Grid.Column="1"
+                              HorizontalScrollBarVisibility="Auto"
+                              VerticalScrollBarVisibility="Disabled"
+                              Margin="8,0">
+                    <ItemsControl ItemsSource="{Binding BreadcrumbParts}"
+                                  VerticalAlignment="Center">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal" Spacing="2"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate x:DataType="vm:BreadcrumbItem">
+                                <StackPanel Orientation="Horizontal">
+                                    <Button Classes="ghost"
+                                            Content="{Binding Name}"
+                                            Command="{Binding $parent[ItemsControl].DataContext.NavigateToCommand}"
+                                            CommandParameter="{Binding Path}"
+                                            Padding="4,2"
+                                            MaxWidth="150"
+                                            FontSize="{DynamicResource FileBrowserCellFontSize}">
+                                        <Button.Styles>
+                                            <Style Selector="Button > ContentPresenter > TextBlock">
+                                                <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+                                            </Style>
+                                        </Button.Styles>
+                                    </Button>
+                                    <TextBlock Text=">"
+                                               VerticalAlignment="Center"
+                                               Margin="2,0"
+                                               Foreground="{DynamicResource TextMutedBrush}"
+                                               FontSize="{DynamicResource FileBrowserCellFontSize}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
 
                 <ComboBox Grid.Column="2"
                           SelectedIndex="{Binding FilterIndex}"
