--- a/NiziKit.Editor/Views/ComponentsPanel.axaml
+++ b/NiziKit.Editor/Views/ComponentsPanel.axaml
@@ -6,6 +6,7 @@
              x:DataType="vm:EditorViewModel">
 
     <ScrollViewer VerticalScrollBarVisibility="Auto"
+                  HorizontalScrollBarVisibility="Disabled"
                   Padding="8">
         <StackPanel>
             <StackPanel IsVisible="{Binding !HasSelection}"
@@ -19,10 +20,11 @@
                     Margin="0,0,0,12" />
                 <TextBlock Text="Select an object to edit"
                            Classes="muted"
-                           HorizontalAlignment="Center" />
+                           HorizontalAlignment="Center" 
+                           FontSize="{DynamicResource EditorFontSizeSmall}"/>
             </StackPanel>
 
-            <StackPanel IsVisible="{Binding HasSelection}"
+            <StackPanel IsVisible="{Binding DataContext.HasSelection, RelativeSource={RelativeSource AncestorType=UserControl}}"
                         DataContext="{Binding SelectedGameObject}">
 
                 <Border Background="{DynamicResource SurfaceBrush}"
