--- a/NiziKit.Editor/Views/Editors/AssetRefEditor.axaml
+++ b/NiziKit.Editor/Views/Editors/AssetRefEditor.axaml
@@ -40,6 +40,7 @@
                 BorderThickness="1"
                 CornerRadius="{DynamicResource EditorControlCornerRadius}"
                 Padding="10"
+                Margin="80,0,0,0"
                 MaxHeight="280">
             <StackPanel Spacing="8">
                 <TextBox x:Name="PackSearchBox"
@@ -86,7 +87,7 @@
                               Data="M7,10L12,15L17,10H7Z"
                               Width="10" Height="10"
                               Foreground="{DynamicResource TextMutedBrush}"
-                              Margin="6"/>
+                              Margin="6,0,0,0"/>
                 </Grid>
             </Border>
         </Grid>
@@ -99,6 +100,7 @@
                 BorderThickness="1"
                 CornerRadius="{DynamicResource EditorControlCornerRadius}"
                 Padding="10"
+                Margin="80,0,0,0"
                 MaxHeight="280">
             <StackPanel Spacing="8">
                 <TextBox x:Name="AssetSearchBox"
