--- a/NiziKit.Editor/Views/Editors/AssetRefEditor.axaml
+++ b/NiziKit.Editor/Views/Editors/AssetRefEditor.axaml
@@ -25,7 +25,8 @@
                                TextTrimming="CharacterEllipsis"/>
                     <PathIcon Grid.Column="1"
                               Data="M7,10L12,15L17,10H7Z"
-                              Width="10" Height="10"
+                              Width="{DynamicResource EditorFontSizeSmall}"
+                              Height="{DynamicResource EditorFontSizeSmall}"
                               Foreground="{DynamicResource TextMutedBrush}"
                               Margin="6,0,0,0"/>
                 </Grid>
@@ -53,35 +54,36 @@
                                VerticalAlignment="Center"
                                TextTrimming="CharacterEllipsis"/>
                     <PathIcon Grid.Column="1"
-                              Data="M7,10L12,15L17,10H7Z"
-                              Width="10" Height="10"
+                              Data="M15.5,14L20.5,19L19,20.5L14,15.5V14.71L13.73,14.43C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.43,13.73L14.71,14H15.5M9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14Z"
+                              Width="{DynamicResource EditorFontSizeSmall}"
+                              Height="{DynamicResource EditorFontSizeSmall}"
                               Foreground="{DynamicResource TextMutedBrush}"
-                              Margin="6,0,0,0"/>
+                              Margin="6,0,0,0"
+                              ToolTip.Tip="Browse assets"/>
                 </Grid>
             </Border>
         </Grid>
 
-        <!-- Popup for selection (shared between pack and asset) -->
-        <Popup x:Name="SelectorPopup"
+        <!-- Pack selector popup (small dropdown) -->
+        <Popup x:Name="PackSelectorPopup"
                IsLightDismissEnabled="True"
-               PlacementMode="Bottom"
+               Placement="Bottom"
                WindowManagerAddShadowHint="True">
             <Border Background="{DynamicResource SurfaceBrush}"
                     BorderBrush="{DynamicResource PanelBorderBrush}"
                     BorderThickness="1"
                     CornerRadius="{DynamicResource EditorControlCornerRadius}"
                     Padding="8"
-                    MinWidth="200"
-                    MaxWidth="300"
-                    MaxHeight="320">
+                    MinWidth="180"
+                    MaxHeight="280">
                 <StackPanel Spacing="8">
-                    <TextBox x:Name="SearchBox"
-                             Watermark="Search..."
+                    <TextBox x:Name="PackSearchBox"
+                             Watermark="Search packs..."
                              FontSize="{DynamicResource EditorFontSizeSmall}"/>
-                    <ScrollViewer MaxHeight="250"
+                    <ScrollViewer MaxHeight="200"
                                   HorizontalScrollBarVisibility="Disabled"
                                   VerticalScrollBarVisibility="Auto">
-                        <ItemsControl x:Name="ItemsControl"/>
+                        <ItemsControl x:Name="PackItemsControl"/>
                     </ScrollViewer>
                 </StackPanel>
             </Border>
